# open-a-data-file1

./: .gitignore  ExtraMakefile  Makefile.am  configure.ac  libtool
data/: Makefile.am
data/text/: Makefile.am  blah.txt
doc/: open-a-data-file1.1  open-a-data-file1.texi
src/: Makefile.am  example_gtk_sqlite_main.c  main.c
